--- a/app/blocks/logo/logo.pug
+++ b/app/blocks/logo/logo.pug
@@ -26,6 +26,10 @@ mixin logo-image(tag)
   +b(tag || 'a').logo&attributes(attributes)
     +e.IMG.icon(src="assets/images/logo.svg")
 
+mixin logo-image2(tag)
+  +b(tag || 'a').logo&attributes(attributes)
+    +e.IMG.icon(src="assets/images/logo2.svg")
+
 mixin logo-image-short(tag)
   +b(tag || 'a').logo&attributes(attributes)
     +e.IMG.icon(src="assets/images/logo-short.svg")
