--- a/app/blocks/logo/logo.scss
+++ b/app/blocks/logo/logo.scss
@@ -30,6 +30,13 @@
       opacity: 0;
     }
 
+    #{$b}_mfull & {
+      @include screen('sm') {
+        display: block;
+        opacity: 1;
+      }
+    }
+
     .header.is-short & {
       opacity: 0;
     }
