--- a/app/components/form-order-summary/form-order-summary.pug
+++ b/app/components/form-order-summary/form-order-summary.pug
@@ -85,7 +85,7 @@ mixin form-order-summary(editable)
         - }
       +e.text_dark._small3 Total amount is first bill you need to pay to start the rent. You will receive first bill with that amount to pay.
     +form-panel._pd42.__panel_absolute.__panel_border
-      +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Cancel  Reservation
+      +link-icon('select-arrow', 'a')._back._bold._no-shadow.__button.js-popup(href="#popup-cancellation") Cancel  Reservation
       +button('button')(type="submit").__button_w360 Confirm order summary
     block
 
@@ -175,6 +175,6 @@ mixin form-order-summary-mobile(editable)
             - }
           +e.text_dark._small3 Total amount is first bill you need to pay to start the rent. You will receive first bill with that amount to pay.
     +form-panel.__panel_absolute.__panel_border.__panel_small
-      +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow._mfz12.__button Cancel  Reservation
+      +link-icon('select-arrow', 'a')._back._bold._no-shadow._mfz12.__button.js-popup(href="#popup-cancellation") Cancel  Reservation
       +button('button')(type="submit")._mob-smaller.__button Confirm
     block
