--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -19,6 +19,7 @@ include ../blocks/calendar/calendar
 include ../blocks/card-mask/card-mask
 include ../blocks/category-filter/category-filter
 include ../blocks/characteristics-table/characteristics-table
+include ../blocks/client-info/client-info
 include ../blocks/close/close
 include ../blocks/content-zone/content-zone
 include ../blocks/contract-status/contract-status
@@ -134,6 +135,7 @@ include ../blocks/travel-time/travel-time
 include ../blocks/uploader-output/uploader-output
 include ../blocks/uploader/uploader
 include ../blocks/user-link/user-link
+include ../blocks/warning/warning
 include ../components/advanced-filter/advanced-filter
 include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/compact-filter/compact-filter
