--- a/app/pages/deal-passport/deal-passport-state2.pug
+++ b/app/pages/deal-passport/deal-passport-state2.pug
@@ -66,3 +66,6 @@ block popups
     +form-order-summary-mobile(true).__form
   +popup-invoices#popup-invoices
   +popup-invoices-mobile#popup-invoices-mobile
+  +popup-invoice#popup-invoice
+  +popup-invoice-mobile#popup-invoice-mobile
+  +popup-cancellation#popup-cancellation
