--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -61,6 +61,8 @@ block content
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-order-host,md:#popup-order-mobile-host") Popup order summary HOST
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-order-guest,md:#popup-order-mobile-guest") Popup order summary GUEST
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-invoices,md:#popup-invoices-mobile") Popup invoices
+        +link.js-popup-depends-width(href="#" data-source="xl:#popup-invoice,md:#popup-invoice-mobile") Popup One Invoice
+        +link(href="#popup-cancellation").js-popup Popup cancel reservation
 
 block panels
   +main-menu
@@ -91,3 +93,6 @@ block popups
     +form-order-summary-mobile.__form
   +popup-invoices#popup-invoices
   +popup-invoices-mobile#popup-invoices-mobile
+  +popup-invoice#popup-invoice
+  +popup-invoice-mobile#popup-invoice-mobile
+  +popup-cancellation#popup-cancellation
