--- a/app/blocks/characteristics-table/characteristics-table.scss
+++ b/app/blocks/characteristics-table/characteristics-table.scss
@@ -23,7 +23,6 @@
 
     td {
       display: block;
-      white-space: nowrap;
       text-align: left;
 
       &:last-child {
@@ -37,7 +36,71 @@
       }
     }
 
+    #{$b}__row {
+
+      &_bsr {
+        align-items: baseline;
+      }
+    }
+
     #{$b}__cell {
+      white-space: nowrap;
+
+      &_wrap {
+        white-space: normal;
+      }
+
+      &_mw250 {
+        max-width: 250px;
+
+        @include screen('sm') {
+          max-width: 200px;
+        }
+      }
+
+      &_fz20 {
+        @include heading-4;
+
+        line-height: (38 / 20);
+
+        @include screen('sm') {
+          @include text;
+
+          line-height: (38 / 14);
+        }
+      }
+
+      &_h45 {
+        padding-top: 12px;
+        padding-bottom: 13px;
+        line-height: 1.2;
+
+        @include screen('sm') {
+          padding-top: 10px;
+          padding-bottom: 9px;
+          line-height: 1.3;
+        }
+
+        &#{$b}__cell_fz20 {
+          padding-top: 10px;
+          padding-bottom: 10px;
+
+          @include screen('sm') {
+            padding-top: 10px;
+            padding-bottom: 9px;
+          }
+        }
+      }
+
+      &_fw400 {
+        font-weight: 400;
+      }
+
+      &_flex {
+        display: inline-flex;
+        justify-content: flex-end;
+        align-items: flex-start;
+      }
 
       &_dark {
         color: $color-basic;
@@ -46,6 +109,14 @@
       &_bold {
         font-weight: 700;
       }
+    }
+  }
+
+  &__new {
+    align-self: center;
+
+    &:not(:last-child) {
+      margin-right: 8px;
     }
   }
 
