--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -138,6 +138,14 @@
     }
   }
 
+  &_mfz12 {
+    @include screen('sm') {
+      @include text12;
+
+      letter-spacing: -.03em;
+    }
+  }
+
   &__icon {
     position: absolute;
     left: 0;
@@ -155,6 +163,11 @@
       #{$b}_download-small & {
         width: 15px;
         height: 15px;
+
+        @include screen('sm') {
+          width: 12px;
+          height: 12px;
+        }
       }
     }
 
