--- a/app/components/popup-cancellation/popup-cancellation.pug
+++ b/app/components/popup-cancellation/popup-cancellation.pug
@@ -1,3 +1,20 @@
 mixin popup-cancellation()
-  +b.popup-cancellation&attributes(attributes)
+  +popup._big.popup-cancellation__&attributes(attributes)
+    div.popup__heading
+      +popup-title Cancel Reservation
+    +warning.__warning Attention! This can not be undone. You are about to cancel your reservation.
+    +form._white.__form
+      +form-section
+        +form-section-wrapper
+          +form-box('Reason for cancellation')
+            +select.js-select-input(name="dayPart")
+              option(value="" placeholder) Reason for cancellation
+              option(value="1") Reason 1
+              option(value="2") Reason 2
+              option(value="3") Reason 3
+              option(value="4") Reason 4
+              option(value="5") Reason 5
+      +form-panel.__panel_small
+        +link-icon('select-arrow', 'a')(href="#" data-fancybox-close)._back._bold._no-shadow._mfz12.__button Don’t cancel
+        +button('button')(type="submit")._mob-smaller.__button Cancel Reservation
     block
