--- a/app/components/popup-invoices/popup-invoices.scss
+++ b/app/components/popup-invoices/popup-invoices.scss
@@ -27,7 +27,7 @@
       padding-top: 55px;
       padding-bottom: 28px;
 
-      @include screen('sm') {
+      @include screen('md') {
         padding-top: 12px;
         padding-bottom: 12px;
       }
@@ -37,7 +37,7 @@
       padding: 138px 70px 65px;
 
       @include screen('md') {
-        padding: 80px 0 0;
+        padding: 70px 0 0;
       }
 
       @include screen('sm') {
