--- a/app/components/popup-order-summary/popup-order-summary.scss
+++ b/app/components/popup-order-summary/popup-order-summary.scss
@@ -28,7 +28,7 @@
       padding-top: 50px;
       padding-bottom: 28px;
 
-      @include screen('sm') {
+      @include screen('md') {
         padding-top: 12px;
         padding-bottom: 12px;
       }
@@ -38,7 +38,7 @@
       padding: 132px 0 80px;
 
       @include screen('md') {
-        padding: 80px 0;
+        padding: 70px 0 80px;
       }
 
       @include screen('sm') {
