--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2852,6 +2852,17 @@ block content
               span /mo
             input(type="hidden" name="price" value="1568.00" data-field-copy="t2")
 
+    //- invoice-info
+    +ui-section
+      +ui-section-head
+        h2 invoice-info
+        p Блок: block/invoice-info
+      +ui-section-content
+        +ui-description .invoice-info
+        +invoice-info({isnew: true, date: { iso: '2019-06-24', text: '24 June 2019'}, nameTag: 'a', name: 'One Heddon Street Center', price: '&pound; 1568.00', pay: true})
+        +ui-description .invoice-info.is-new
+        +invoice-info({isnew: true, date: { iso: '2019-06-24', text: '24 June 2019'}, nameTag: 'a', name: 'One Heddon Street Center', price: '&pound; 1568.00', pay: true}).is-new
+
 block panels
   +main-menu
 
