--- a/app/blocks/contract-status/contract-status.scss
+++ b/app/blocks/contract-status/contract-status.scss
@@ -63,6 +63,8 @@
 
     font-weight: 400;
     line-height: 1.35;
+    display: block;
+    width: 100%;
 
     &:not(:first-child) {
       margin-top: 52px;
