--- a/app/components/popup-invoices/popup-invoices.scss
+++ b/app/components/popup-invoices/popup-invoices.scss
@@ -55,6 +55,22 @@
 
   &__table {
     width: 100%;
+
+    .table {
+
+      &__row_interactive {
+        box-shadow: 0 -2px 0 -1px transparent;
+        position: relative;
+        transition: box-shadow $ease-main, border $ease-main, color $ease-main;
+        cursor: pointer;
+
+        &:hover {
+          color: $color-basic-dark;
+          border-color: $color-basic-dark;
+          box-shadow: 0 -2px 0 -1px $color-basic-dark;
+        }
+      }
+    }
   }
 
   &__invoices {
