--- a/app/pages/deal-passport/deal-passport-state2.pug
+++ b/app/pages/deal-passport/deal-passport-state2.pug
@@ -17,7 +17,7 @@ block content
             +breadcrumbs(['Home', 'Booking', 'One Heddon Street']).__navigation
             +e.step_light Office Space
           +e.links
-            +link-icon('round-cross')(href="#")._icon_gray._no-shadow._bold._icon_small._light-underline.__link_fz17._cnl Cancel Reservation
+            +link-icon('round-cross')._icon_gray._no-shadow._bold._icon_small._light-underline.__link_fz17._cnl.js-popup(href="#popup-cancellation") Cancel Reservation
   +content-origin._reverse._mid-pad._wide-lg._last
     .container
       +e.wrapper
