--- a/app/blocks/message-form/message-form.pug
+++ b/app/blocks/message-form/message-form.pug
@@ -1,6 +1,6 @@
 mixin message-form()
   +b.FORM.message-form&attributes(attributes)
     +e.wrapper
-      +textarea.__textarea(type="text" name="message" placeholder="Message here..." rows="1")
+      +textarea.message-form__textarea.js-message(type="text" name="message" placeholder="Message here..." rows="1")
       +e.BUTTON.button(type="submit") Отправить
         +icon('chat-arrow').icon
