--- a/app/components/popup-invoices/popup-invoices.pug
+++ b/app/components/popup-invoices/popup-invoices.pug
@@ -11,26 +11,26 @@ mixin popup-invoices()
           th.table__cell.table__cell_head Amount to pay
           th.table__cell.table__cell_head Status
       tbody
-        tr.table__row
+        tr.table__row.table__row_interactive.js-popup-depends-width(data-source="xl:#popup-invoice,md:#popup-invoice-mobile")
           td.table__cell
             +status._fz10._grad.table__status new
-            a.js-popup-depends-width(href="#" data-source="xl:#popup-invoice,md:#popup-invoice-mobile") One Heddon street Office space
+            span One Heddon street Office space
           td.table__cell 25 Apr 2019
           td.table__cell 30 Apr 2019
           td.table__cell.table__cell_bold 1568.00 &pound;
           td.table__cell.table__cell_bold
             +button()._smaller._fz17._wide(href="#") Pay now
         - for (var i = 0; i < 9; i++) {
-          tr.table__row
+          tr.table__row.table__row_interactive.js-popup-depends-width(data-source="xl:#popup-invoice,md:#popup-invoice-mobile")
             td.table__cell
-              a.js-popup-depends-width(href="#" data-source="xl:#popup-invoice,md:#popup-invoice-mobile") One Heddon street Office space
+              span One Heddon street Office space
             td.table__cell 25 Mar 2019
             td.table__cell 30 Feb 2019
             td.table__cell.table__cell_bold 1568.00 &pound;
             td.table__cell.table__cell_bold Paid
-          tr.table__row
+          tr.table__row.table__row_interactive.js-popup-depends-width(data-source="xl:#popup-invoice,md:#popup-invoice-mobile")
             td.table__cell
-              a.js-popup-depends-width(href="#" data-source="xl:#popup-invoice,md:#popup-invoice-mobile") One Heddon street Office space
+              span One Heddon street Office space
             td.table__cell 25 Mar 2019
             td.table__cell 30 Feb 2019
             td.table__cell.table__cell_bold 1568.00 &pound;
@@ -50,9 +50,9 @@ mixin popup-invoices-mobile()
     +popup-content
       div.popup__scrollblock.js-scrollbar-light
         +e.DIV.invoices
-          +invoice-info(data1).is-new.__invoice
+          +invoice-info(data1).is-new.__invoice.js-popup-depends-width(data-source="xl:#popup-invoice,md:#popup-invoice-mobile")
           - for (var i = 0; i < 3; i++) {
-            +invoice-info(data2).__invoice
-            +invoice-info(data3).__invoice
+            +invoice-info(data2).__invoice.js-popup-depends-width(data-source="xl:#popup-invoice,md:#popup-invoice-mobile")
+            +invoice-info(data3).__invoice.js-popup-depends-width(data-source="xl:#popup-invoice,md:#popup-invoice-mobile")
           -}
       block
