--- a/app/components/popup-invoice/popup-invoice.pug
+++ b/app/components/popup-invoice/popup-invoice.pug
@@ -6,6 +6,10 @@ mixin popup-invoice()
       +popup-title Invoice:  INV-SP-52352
       div.popup__info.popup__info_mb0
         +logo-image().__logo
+      +e.A.close.js-popup-depends-width(href="#" data-source="xl:#popup-invoices,md:#popup-invoices-mobile")
+        +e.SVG.close-icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.36 15.36")
+          rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(18.55 7.68) rotate(135)")
+          rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(7.68 -3.18) rotate(45)")
     +grid.grid_gap106
       +col({xl: 6, sm: 12})
         +client-info({name: 'Guest', info: [{name: 'To:', text: 'Bright Ideas Ltd. 1st Floor, 5 Martin Lande London EC1&nbsp;4AD', cls: ' _mw250'}, {name: 'Issued:', text: '01.06.2019'}, {name: 'Due:', text: '01.07.2019'}]})
@@ -51,6 +55,10 @@ mixin popup-invoice()
 mixin popup-invoice-mobile()
   +popup-mobile._white.popup-invoice__&attributes(attributes)
     +popup-header.popup__header_white.popup__header_border
+      +e.A.close.js-popup-depends-width(href="#" data-source="xl:#popup-invoices,md:#popup-invoices-mobile")
+        +e.SVG.close-icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.36 15.36")
+          rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(18.55 7.68) rotate(135)")
+          rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(7.68 -3.18) rotate(45)")
       +popup-title Invoice: INV-SP-2141532
     +popup-content
       div.popup__scrollblock.js-scrollbar-light
