--- a/app/components/popup-invoice/popup-invoice.scss
+++ b/app/components/popup-invoice/popup-invoice.scss
@@ -3,6 +3,7 @@
 
   .popup {
     &__close {
+      display: none;
       top: 13px;
       right: 16px;
       width: 38px;
@@ -43,6 +44,49 @@
       @include screen('sm') {
         padding: 50px 0;
       }
+    }
+  }
+
+  &__close {
+    position: absolute;
+    top: 13px;
+    right: 16px;
+    width: 38px;
+    height: 38px;
+    display: block;
+    -webkit-appearance: none;
+    background-color: transparent;
+    color: $color-black;
+    outline: none;
+    border: none;
+    fill: currentColor;
+    transition: color $ease-main;
+    padding: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    z-index: 100000;
+
+    @include screen('md') {
+      top: 13px;
+      left: 26px;
+      width: 44px;
+      height: 44px;
+    }
+
+    @include screen('sm') {
+      top: 8px;
+      left: 9px;
+      width: 34px;
+      height: 34px;
+    }
+
+    &:hover {
+      color: $color-basic;
+    }
+
+    &-icon {
+      width: 100%;
+      height: 100%;
     }
   }
 
