--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -10,6 +10,11 @@
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
+
+    &_sb {
+      justify-content: space-between;
+    }
   }
 
   &__form {
