--- a/app/pages/host-reservations/host-reservations-old-version.pug
+++ b/app/pages/host-reservations/host-reservations-old-version.pug
@@ -14,8 +14,9 @@ block content
           +side-navigation('Change your personal info, password and notification options here')
             +nav-list-sidebar(getData('side-menu-host.json'), 'Reservations').__navigation
         +content-column-main
-          +filter-reservations
           +section._inner._inner_ssmg
+            +section-header._flex
+              +section-title('h3') Today
             +section-content
               +table-head._messages.hide-md
                 +e.wrapper
